samples/_failures_safe/1761607245_c2d334_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cf7db0d.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_9cf7db0d.c:138:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  138 |     for (int p
      |     ^~~
./samples/SAFE/__tmp_9cf7db0d.c:138:5: error: expected declaration or statement at end of input
